fixed sign up button alignment on sm screen

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ a.bg-gray:hover {
     }
 
     #newsletter > div:nth-child(1) {
-        height: 320px;
+        height: 350px;
     }
 
     #newsletter > div > div > div:nth-child(1) {
